--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>На шамору!</title>
+	<title>На море</title>
 </head>
 <body>
 	
