--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>На море</title>
-    <link rel="stylesheet" href="/css/style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 
@@ -15,7 +15,7 @@
         </div>
     </div>
 
-    <script src="/js/common.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
