Creatd stylesheet for main-screen

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,9 +9,25 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
-                <h1>На море</h1>
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <h1 class="text-center">На море</h1>
             </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="js-map map"></div>
+            </div>
+        </div>
+        <div class="row">
+            <nav class="col-lg-12-col-md-12 col-sm-12">
+                <ul class="nav main-menu nav-pills nav-justified">
+                    <li class="main-menu__item js-main-menu-item"><a href="#" class="main-menu__link js-main-menu-link js-driver-link">Везу на море</a>
+                    </li>
+                    <li class="main-menu__item js-main-menu-item"><a href="#" class="main-menu__link js-main-menu-link js-passenger-link">Хочу на море</a>
+                    </li>
+                    <li class="main-menu__item js-main-menu-item"><a href="#" class="main-menu__link js-main-menu-link js-donate-link">Оплатить</a></li>
+                </ul>
+            </nav>
         </div>
     </div>
 
