add map & add cookie methods

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
-                <div class="js-map map"></div>
+                <div id="js-map" class="js-map map"></div>
             </div>
         </div>
         <div class="row">
@@ -25,7 +25,7 @@
                     </li>
                     <li class="main-menu__item js-main-menu-item"><a href="#" class="main-menu__link js-main-menu-link js-passenger-link">Хочу на море</a>
                     </li>
-                    <li class="main-menu__item js-main-menu-item"><a href="#" class="main-menu__link js-main-menu-link js-donate-link">Оплатить</a></li>
+                    <li class="main-menu__item js-main-menu-item"><a href="#" class="main-menu__link js-main-menu-link js-donate-link">Помощь проекту</a></li>
                 </ul>
             </nav>
         </div>
