--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -33,5 +33,6 @@
 
     <script src="js/common.js"></script>
     <script src="js/main.js"></script>
+	<script src="js/firebase.js"></script>
 </body>
 </html>
