--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -25,7 +25,7 @@
                     </li>
                     <li class="main-menu__item js-main-menu-item"><a href="#" class="main-menu__link js-main-menu-link js-passenger-link">Хочу на море</a>
                     </li>
-                    <li class="main-menu__item js-main-menu-item"><a href="#" class="main-menu__link js-main-menu-link js-donate-link">Помощь проекту</a></li>
+                    <li class="main-menu__item js-main-menu-item"><a href="#" class="main-menu__link js-main-menu-link js-donate-link" data-toggle="modal" data-target="#donate">Помощь проекту</a></li>
                 </ul>
             </nav>
         </div>
