--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -29,6 +29,20 @@
                 </ul>
             </nav>
         </div>
+		<!-- Modal -->
+		<div class="modal fade" id="donate" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		  <div class="modal-dialog" role="document">
+			<div class="modal-content">
+			  <div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<h4 class="modal-title" id="myModalLabel">Помощь проекту</h4>
+			  </div>
+			  <div class="modal-body">
+				<p>Здравствуй, друг! Ты делаешь хорошее дело, помогая людям с ограниченными возможностями. Вместе мы делаем этот мир интересным и теплым.</p>
+			  </div>			 
+			</div>
+		  </div>
+		</div>
     </div>
 
     <script src="js/common.js"></script>
