--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <title>На море</title>
     <link rel="stylesheet" href="css/style.css"/>
 </head>
