--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,7 +13,7 @@
                 <h1 class="text-center">На море</h1>
             </div>
         </div>
-        <div class="row">
+        <div class="row" id="wis">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div id="js-map" class="js-map map"></div>
             </div>
