--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -27,9 +27,7 @@
                     <li class="main-menu__item js-main-menu-item"><a href="#" class="main-menu__link js-main-menu-link js-passenger-link">Хочу на море</a>
                     </li>
 					<li class="main-menu__item js-main-menu-item"><a href="#" class="main-menu__link js-main-menu-link js-donate-link" data-toggle="modal" data-target="#donate">Помощь проекту</a>
-					</li>					
-					<li class="main-menu__item js-main-menu-item"><a href="#" class="main-menu__link js-main-menu-link js-userinfo-link" data-toggle="modal" data-target="#userinfo">Моя информация</a>
-					</li>
+					</li>						
                 </ul>
             </nav>
 			
@@ -47,7 +45,7 @@
 				  </div>
 				  <div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Отмена</button>
-					<button type="button" class="btn btn-primary">OK</button>
+					<button type="submit" class="btn btn-primary">OK</button>
 				  </div>
 				</div>
 			  </div>
@@ -55,6 +53,7 @@
 				 
 			<!-- Info modal -->			
 			<div id="userinfo" class="modal fade" tabindex="-1" role="dialog">
+			<form id="userinfoform">
 			  <div class="modal-dialog modal-sm">
 				<div class="modal-content">
 				  <div class="modal-header">
@@ -64,45 +63,46 @@
 				  <div class="modal-body">
 					 <div class="form-group">
 						<label for="exampleInputName">Ваше имя</label>
-						<input type="text" class="form-control" id="exampleInputName" placeholder="Василий">
+						<input type="text" class="form-control" id="exampleInputName" name="exampleInputName" placeholder="Василий">
 					  </div>
 					  <div class="form-group">
 						<label for="exampleInputPhone">Ваш телефон</label>
-						<input type="phone" class="form-control" id="exampleInputPhone" placeholder="+7 123 111 11 11">
+						<input type="phone" class="form-control" id="exampleInputPhone" name="exampleInputPhone" placeholder="+7 123 111 11 11">
 					  </div>
 					  <div class="form-group">
 						<label for="exampleInputPhone">Вид инвалидности</label>
-						<input type="text" class="form-control" id="exampleInputType" placeholder="колясочник">
+						<input type="text" class="form-control" id="exampleInputType" name="exampleInputType" placeholder="колясочник">
 					  </div>
 					  <div class="form-group">
 						  <label for="exampleInputSettings">Желаемые условия проезда</label>
-						  <select class="form-control">						  
-							  <option>Нет особых условий</option>
-							  <option>Можно курить</option>
-							  <option>Можно слушать музыку</option>
-							  <option>Только женщины</option>							  
+						  <select class="form-control" name="exampleInputSettings">						  
+							  <option value='Нет особых условий'>Нет особых условий</option>
+							  <option value='Можно курить'>Можно курить</option>
+							  <option value='Можно слушать музыку'>Можно слушать музыку</option>
+							  <option value='Только женщины'>Только женщины</option>							  
 						  </select>
 					  </div>
 					  <div class="form-group">
 						  <label for="exampleInputTime">Когда вы готовы поехать</label>
-						  <select class="form-control">						  
-							  <option>Не имеет значения</option>
-							  <option>Утром</option>
-							  <option>Днем</option>
-							  <option>Вечером</option>							  
+						  <select class="form-control" name="exampleInputTime">						  
+							  <option value='Не имеет значения'>Не имеет значения</option>
+							  <option value='Утром'>Утром</option>
+							  <option value='Днем'>Днем</option>
+							  <option value='Вечером'>Вечером</option>							  
 						  </select>
 					  </div>
 					  <div class="form-group">
 						  <label for="exampleInputComment">Ваш коментарий</label>
-						  <textarea class="form-control" rows="3"></textarea>						 
+						  <textarea class="form-control" name="exampleInputComment" rows="3"></textarea>						 
 					  </div>
 				  </div>
 				  <div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Отмена</button>
-					<button type="button" class="btn btn-primary">OK</button>
+					<button type="submit" class="btn btn-primary">OK</button>
 				  </div>
 				</div>
 			  </div>
+			</form>
 			</div>
 			
 			
