--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -103,13 +103,20 @@
 				</div>
 			  </div>
 			</form>
-			</div>
-			
-			
-			
+			</div>			
         </div>		
     </div>
 
+    <script type="text/x-handlebars-template" id="bio-template">
+        <div class="show-info js-show-info">
+            <h3 class="show-info__name">Имя: {{ exampleInputName }}</h3>
+            <p class="show-info__phone">Телефон: {{ exampleInputPhone }}</p>
+            <p class="show-info__type">Тип инвалидности: {{ exampleInputType }}</p>
+            <p class="show-info__settings">Предпочтения: {{ exampleInputSettings }}</p>
+            <p class="show-info__time"> Желаемое время {{ exampleInputTime }}</p>
+            <p class="show-info__comment">Комментарии: {{ exampleInputComment }}</p>
+        </div>        
+    </script>
     <script src="js/common.js"></script>
     <script src="js/main.js"></script>   
 </body>
